fix warnings per static code analysis